@@ -76,7 +76,7 @@ AC_CHECK_FUNCS([ThresholdImageChannel RandomChannelThresholdImage StripImage])
 AC_CHECK_FUNCS([AcquireMagickMemory BlackThresholdImage WhiteThresholdImage])
 AC_CHECK_FUNCS([GetMagickInfoArray GetColorInfoArray GetLocaleExceptionMessage])
 AC_CHECK_FUNCS([GetMagickGeometry ParseSizeGeometry TintImage GetColorHistogram])
-AC_CHECK_FUNCS([GetImageHistogram FuzzyColorCompare])
+AC_CHECK_FUNCS([GetImageHistogram FuzzyColorCompare GetImageProfile])
 
 # What typedefs?
 AC_CHECK_TYPES([DisposeType,
