@@ -20,7 +20,7 @@
          background-color: #f0f0f0;
          vertical-align: top;
       }
-                    </style>
+                        </style>
   </head>
   <body>
     <div class="header">
@@ -386,6 +386,13 @@ exit
         </tr>
         <tr>
           <td><a href=
+          "image.html#Image.each_profile">each_profile</a> <span
+          class="imversion">(5.5.8)</span></td>
+          <td>Iterate over all the profiles associated with an
+          image.</td>
+        </tr>
+        <tr>
+          <td><a href=
           "image.html#Image.export_pixels">export_pixels</a> <span
           class="imversion">(5.5.7)</span><span class=
           "gmversion">(1.1)</span></td>
@@ -424,6 +431,12 @@ exit
           "image.html#Image.palette_q">palette?</a></td>
           <td>Is the image PseudoClass type and does it have 256
           colors or less?</td>
+        </tr>
+        <tr>
+          <td><a href=
+          "image.html#Image.profile_bang">profile!</a></td>
+          <td>Add or remove a ICM, IPTC, or generic profile from a
+          image</td>
         </tr>
         <tr>
           <td><a href=
@@ -577,12 +590,6 @@ exit
         <tr class="imgmethod">
           <td><a href="ilist.html#ImageList.mosaic">mosaic</a></td>
           <td>Inlay the images in the imagelist into a single
-          image</td>
-        </tr>
-        <tr>
-          <td><a href=
-          "image.html#Image.profile_bang">profile!</a></td>
-          <td>Add or remove a ICM, IPTC, or generic profile from a
           image</td>
         </tr>
         <tr>
