@@ -13,6 +13,7 @@
 #undef HAVE_GETCOLORHISTOGRAM
 #undef HAVE_GETCOLORINFOARRAY
 #undef HAVE_GETIMAGEHISTOGRAM
+#undef HAVE_GETIMAGEPROFILE
 #undef HAVE_GETLOCALEEXCEPTIONMESSAGE
 #undef HAVE_GETMAGICKGEOMETRY
 #undef HAVE_GETMAGICKINFOARRAY
